2001-03-29  Radek Doulik  <rodo@ximian.com>

	* htmlengine-save.c (color_to_string): use %02x instead of %2x to
	avoid colors like <BODY BGCOLOR="#98cc 0">

	* htmlengine-edit-table.c (insert_table_row): fixed cursor
	position, added row_cells parameter
	(delete_row_setup_undo): rewritten to use cells data

2001-03-29  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (on_object): free the pointer_url before we set it to
	NULL.

2001-03-28  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (insert_table_column): added column
	parameter, when non-NULL, use it as newly created cell-places
	content
	(delete_column_setup_undo): use new undo data and remember deleted
	cells for later undo (insertion)

2001-03-27  Larry Ewing  <lewing@ximian.com>

	* htmliframe.c (destroy): disconnect the signals from the html
	widget that refer to the iframe since the iframe_created.
	(html_iframe_class_init): use the new destroy handler.

2001-03-26  Larry Ewing  <lewing@ximian.com>

	* keybindingsrc.emacs: disable autofill.

2001-03-27  Radek Doulik  <rodo@ximian.com>

	* htmltable.c (append_selection_string): start tabbing on first
	non-empty cell

	* htmlclueflow.c (merge): use style of second flow if first one is
	empty
	(pref_right_margin): removed unused variable

	* htmlengine-search.c (move_to_found): fixed coordinates
	calculation

	* htmlclueflow.c (calc_preferred_width): don't remove trailing
	space width on the end of paragraph

2001-03-26  Larry Ewing  <lewing@ximian.com>

	* Makefile.am: add htmlplainpainter.[ch]

	* htmlclueflow.c (pref_right_margin): determine the prefered
	margin based on the width of the line in plain painters.

2001-03-26  Radek Doulik  <rodo@ximian.com>

	* gtkhtml-search.c (gtk_html_engine_search_incremental): added
	wrappers around html_engine_search_... methods

	* htmltokenizer.c (in_extension): even more safe extension
	handling

	* htmlcolor.c (html_color_unref): really free color

	* htmlengine.c (parse_d): better checking
